Mention ISO C build requirement.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -29,6 +29,8 @@
         GCC 3.3</a> has been removed from GCC 3.4.  See below for a
         <a href="#obsolete_systems">list of systems which are obsoleted
         in this release</a>.</li>
+    <li>GCC now requires an ISO C90 (ANSI C89) C compiler to build.
+        K&amp;R C compilers will not work.</li>
   </ul>
 
 <h2>General Optimizer Improvements</h2>
