Add a link to simtest-howto.html.

--- a/htdocs/testing/index.html
+++ b/htdocs/testing/index.html
@@ -56,6 +56,9 @@ the test suite directories.</p>
       are not already being reported regularly; see
       <a href="http://gcc.gnu.org/install/test.html">Installing GCC:
       Testing</a> for instructions on submitting test results.</li>
+  <li>Build cross compilers and test with simulators as described in
+      <a href="http://gcc.gnu.org/simtest-howto.html">How to test GCC
+      on a simulator</a>.</li>
   <li>If your system is beefy enough, do regular builds and test runs with
       RTL consistency checks enabled.  This slows the compiler down by an
       order of magnitude but has found plenty of bugs in the past.</li>
