* htdocs/contribute.html: Shorten patch follow-up period and 	require short description.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -219,12 +219,12 @@ the <a href="cvs.html">Anonymous read-only CVS access</a> and <a
 href="cvswrite.html">Read-write CVS access</a> pages.</p>
 
 <p>If you do not receive a response to a patch that you have submitted
-within a month or so, it may be a good idea to chase it by sending a
+within two weeks or so, it may be a good idea to chase it by sending a
 follow-up email to <a
 href="mailto:gcc-patches@gcc.gnu.org">gcc-patches@gcc.gnu.org</a>.
 Patches can occasionally fall through the cracks. Please be sure to
-include the URL of the entry in the mailing list archive of the
-original submission.</p>
+include a brief summary of the patch and the URL of the entry in the
+mailing list archive of the original submission.</p>
 
 <p>Patches to the standard C++ library (libstdc++-v3), and its web
 pages, and discussion of such patches, should go to <a
