--- a/htdocs/bugs/management.html
+++ b/htdocs/bugs/management.html
@@ -74,8 +74,8 @@ A maintainer has verified that this is indeed a bug in GCC. Every
 once in a while, old reports will need to be rechecked, to find out
 whether the bug still exists.
 
-<p>For reports in components C, C++, and optimization, we require that there is
-a reduced, small testcase before a report can be put into this state. This
+<p>For reports in components "C", "C++", and "optimization", we require that
+there is a reduced, small testcase before they can be put into this state. This
 makes sure that all NEW reports are really analyzed and are ready to be handed
 off to the people actually fixing bugs.</p>
 </dd>
@@ -156,12 +156,12 @@ perspective (severity) and which priority we assign to it in fixing it:</p>
 <h3 align="center" id="severity">Severity</h3>
 This field describes the impact of a bug.
 <table>
-<tr><th>Critical</th><td>crashes, memory leak and similar problems on code that
-is written in a common enough style to affect a significant fraction of
+<tr><th>Critical</th><td>crashes, memory leaks and similar problems on code
+that is written in a common enough style to affect a significant fraction of
 users</td></tr>
-<tr><th>Normal</th><td>major loss of function </td></tr>
-<tr><th>Minor</th><td>minor loss of function, misspelled word, or other problem
-where an easy workaround is present </td></tr>
+<tr><th>Normal</th><td>major loss of functionality </td></tr>
+<tr><th>Minor</th><td>minor loss of functionality, misspelled word, or other
+problem where an easy workaround exists </td></tr>
 <tr><th>Enhancement</th><td>Request for enhancement</td></tr>
 </table> 
 
