* Replace use of outdated severity "blocker" with "critical".         * Correct policy for error recovery bugs.

--- a/htdocs/bugs/management.html
+++ b/htdocs/bugs/management.html
@@ -204,9 +204,9 @@ The synopsis line should read</p>
 
 <p>where &lt;branches-to-fix&gt; is the list of <em>maintained</em>
 branches (separated by slashes) that need fixing. A regression should
-start with severity "<strong>blocker</strong>" to bring it to attention.
+start with severity "<strong>critical</strong>" to bring it to attention.
 It may be downgraded later if a defect is not important enough to justify
-"blocker" severity.</p>
+"critical" severity.</p>
 
 <p><strong>Bugs in component "bootstrap"</strong> that refer to older
 releases or snapshots/CVS versions should be put into state "WAITING",
@@ -222,8 +222,8 @@ report her findings in any case (whether positive or negative).</p>
 <p><strong>Bugs with keyword "ice-on-invalid-code"</strong>, where gcc
 emits a sensible error message before issuing an ICE (the ICE will be
 replaced by the message "confused by earlier errors, bailing out" in
-release versions) should get "minor" severity.
-It should be noted in the comments that the error recovery fails.</p>
+release versions) should get "minor" severity and the additional keyword
+"error-recovery".</p>
 
 
 </body>
