Update policy for regressions.

--- a/htdocs/bugs/management.html
+++ b/htdocs/bugs/management.html
@@ -203,9 +203,10 @@ The synopsis line should read</p>
 </blockquote>
 
 <p>where &lt;branches-to-fix&gt; is the list of <em>maintained</em>
-branches (separated by slashes) that need fixing. A regression should
-start with severity "<strong>critical</strong>" to bring it to attention.
-It may be downgraded later if a defect is not important enough to justify
+branches (separated by slashes) that need fixing. In addition the target
+milestone should be set accordingly. A regression should start with
+severity "<strong>critical</strong>" to bring it to attention. It may
+be downgraded later if a defect is not important enough to justify
 "critical" severity.</p>
 
 <p><strong>Bugs in component "bootstrap"</strong> that refer to older
