Fix the broken link to Diego's SPEC tester and makes the link more stable in the light of possible future changes by referring to our generic benchmark page.

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -61,8 +61,7 @@
     profile statically.</p>
 </li>
 
-<li><p><a href="http://www.suse.de/~aj/SPEC/">SPEC2000</a> and <a
-    href="http://people.redhat.com/dnovillo/SPEC/">SPEC95</a> benchmark
+<li><p><a href="../benchmarks/">SPEC2000 and SPEC95</a> benchmark
     suites are now used daily to monitor performance of the generated
     code.</p>
 
