Update/remove redirected/broken links.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -412,7 +412,6 @@ names.
 
 <ul>
   <li><a href="http://www.cmass.com">http://www.cmass.com</a></li>
-  <li><a href="http://www.cl.cam.ac.uk/m3doc/linux/cambridge.html">http://www.cl.cam.ac.uk/m3doc/linux/cambridge.html</a></li>
   <li><a href="http://www.m3.org">http://www.m3.org</a></li>
 </ul>
 
@@ -461,9 +460,7 @@ names.
   <li>EG3 maintains a list of compiler Internet resources, including FAQ's,
 papers, hot list pages, potential software/shareware, all known companies, etc.:
   <ul>
-    <li><a href="http://www.eg3.com/ulc/compulc.htm">http://www.eg3.com/ulc/compulc.htm</a></li>
     <li><a href="http://www.eg3.com/softd/compiler.htm">http://www.eg3.com/softd/compiler.htm</a></li>
-    <li><a href="http://www.eg3.com/softdv/compiler.htm">http://www.eg3.com/softdv/compiler.htm</a></li>
     <li>These resource pages are published as part of EG3's Free Electronic Engineers' Toolbox at:
     <ul>
       <li><a href="http://www.eg3.com/index.htm">http://www.eg3.com/index.htm</a></li>
@@ -479,7 +476,7 @@ papers, hot list pages, potential software/shareware, all known companies, etc.:
 
   <li><a href="http://compilers.iecc.com/">Comp.compilers archive</a></li>
 
-  <li><a href="http://www.mkp.com/books_catalog/catalog.asp?ISBN=1-55860-320-4">
+  <li><a href="http://www.bh.com/mk/default.asp?ISBN=1-55860-320-4">
   Steven Muchnick (1997) "Advanced Compiler Design and Implementation"</a>.
   880pp. Online appendix includes some compiler links.  ISBN: 1-55860-320-4.</li>
 
