Add paragraph about keywords in Bugzilla.

--- a/htdocs/bugs/management.html
+++ b/htdocs/bugs/management.html
@@ -189,6 +189,13 @@ field changes, the status changes to NEW to make it easy to see
 which new bugs have appeared on a person's list.</p>
 
 
+<h3>Keywords</h3>
+
+<p>These are used to further classify the problem reports. Follow the link
+for a <a href="http://gcc.gnu.org/bugzilla/describekeywords.cgi">complete
+list of the keywords including descriptions</a>.</p>
+
+
 <h2>Procedures and Policies</h2>
 
 <p><strong>Bugs that are in state "WAITING"</strong> because they lack
