Add profile feedback improvements.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -36,7 +36,18 @@
 <h2>General Optimizer Improvements</h2>
 
   <ul>
-    <li></li>
+    <li>Usability of the profile feedback and coverage testing has been improved.</li>
+    <ul>
+      <li>Performance of profiled programs has been improved by faster profile
+          merging code.</li>
+      <li>Better use of the profile feedback for optimization (loop unrolling
+          and loop peeling).</li>
+      <li>File locking support allowing <code>fork()</code> calls and parallel
+          runs of profiled programs.</li>
+      <li><code>make profiledbootstrap</code> available to build a faster
+          compiler.</li>
+    </ul>
+    </li>
   </ul>
 
   
