Fix syntax error.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -36,7 +36,7 @@
 <h2>General Optimizer Improvements</h2>
 
   <ul>
-    <li>Usability of the profile feedback and coverage testing has been improved.</li>
+    <li>Usability of the profile feedback and coverage testing has been improved.
     <ul>
       <li>Performance of profiled programs has been improved by faster profile
           merging code.</li>
