Document the ARM pipeline description rewrite.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -104,6 +104,11 @@
     <li>A new ARM target has been added: <code>arm-wince-pe</code>.  This is
     similar to the arm-pe target, but it defaults to using the APCS32
     ABI.</li>
+
+    <li>The existing ARM pipeline description has been converted to
+    the use the <a
+    href="http://gcc.gnu.org/onlinedocs/gccint/Processor-pipeline-description.html">DFA
+    processor pipeline model</a>.</li>
     
     <li>The x86 back end has had some noticeable work done to it.
     <ul>
