Add news item about the ARM pipeline description overhaul.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -82,6 +82,17 @@ to maintain and improve quality.</p>
 
 <dl>
 
+<dt><b>June 23, 2003</b><dt>
+<dd>
+Ben Elliston of Wasabi Systems, Inc. has converted the existing ARM
+processor pipeline description to the new <a
+href="http://gcc.gnu.org/onlinedocs/gccint/Processor-pipeline-description.html">DFA
+pipeline description model</a>.  There is not much change in code
+performance, but the description is now <a
+href="http://gcc.gnu.org/onlinedocs/gccint/Comparison-of-the-two-descriptions.html">easier
+to understand</a>.  It will be part of the GCC 3.4 release.
+</dd>
+
 <dt><b>May 27, 2003</b></dt>
 <dd>
 Proceedings and photographs of participants are available for the First
