--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -271,6 +271,10 @@ and code.  The following table lists some simple cases:</p>
     <td>"Sparc" or "sparc"</td>
   </tr>
   <tr>
+    <td>"testcase", "testsuite"</td>
+    <td>"test-case" or "test case", "test-suite" or "test suite"</td>
+  </tr>
+  <tr>
     <td>"VAX", "VAXen", "MicroVAX"</td>
     <td>"vax" or "Vax", "vaxen" or "vaxes", "microvax" or "microVAX"</td>
   </tr>
